# fScout

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  build.sh
.github/workflows/: ubuntu_build_test.yml
cmake/: CompilerWarnings.cmake  README.txt  Sanitizers.cmake  StaticAnalyzers.cmake
scripts/: build.bat  build.sh  clean_build.bat  clean_build.sh  ino.iss  run.sh
src/display/: CMakeLists.txt
src/display/src/display/: HoverableListWidget.cpp  HoverableListWidget.h  display.cpp  display.h  displayQt.cpp  displayQt.h  finderOutputWidget.cpp  finderOutputWidget.h  finderWidget.cpp  finderWidget.h
src/executable/: .desktop  CMakeLists.txt  icon.rc
src/executable/src/: main.cpp
src/executables/: CMakeLists.txt
src/executables/src/: main.cpp
src/finder/: CMakeLists.txt
src/finder/src/finder/: Dictionary.cpp  Dictionary.h  Finder.cpp  Finder.h  Needle.cpp  Needle.h  SearchPattern.h  Tree.cpp  Tree.h  TreeNode.cpp  TreeNode.h
src/globals/: CMakeLists.txt
src/globals/include/globals/: globals.hpp  macros.hpp  timer.hpp
src/tests/: CMakeLists.txt
src/tests/src/: test_hello_world.cpp
